# KNP-EMI-DG

./: README.md  environment.txt  environment.yml  membrane.py  mm_leak.py  pyproject.toml  run_2D.py  run_rat_neuron.py
elec-prop-test/: make_figures_3D.py  make_figures_3D_emi.py  make_mesh_3D.py  mm_hh.py  mm_leak.py  run_3D.py  run_3D_emi.py  unit_test.py
emix-simulations/: make_figures.py  make_figures_calibration.py  mm_glial.py  mm_hh.py  mm_hh_calibration_ODE.py  mm_hh_glial_calibration_ODE.py  run_EMIx_simulation.py  run_calibration.py  run_calibration_ODE.py  run_calibration_two_tags.py  run_calibration_two_tags_ODE.py  run_two_tags.py
examples/: make_figures_2D.py  make_figures_3D.py  make_mesh_2D.py  make_mesh_3D.py  mm_hh.py  mm_hh_no_stim.py  mm_leak.py  run_2D.py  run_3D.py  run_EMIx_mesh.py  run_rat_neuron.py
potassium_buffering/: make_figures.py  make_figures_calibration.py  make_mesh_3D_two_cells.py  mm_glial.py  mm_hh.py  mm_hh_syn.py  preprosess_mesh_grid.py  preprosess_mesh_syn_10.py  preprosess_mesh_syn_5.py  preprosess_mesh_syn_50.py  run_EMIx_simulation.py  run_EMIx_simulation_synapse.py  run_calibration_two_cells_PDE.py  synapse_location_data_10.yml  synapse_location_data_5.yml  synapse_location_data_50.yml
src/: make_figures_3D.py  make_figures_rat_neuron.py  make_mesh_2D.py  make_mesh_3D.py  make_mesh_MMS.py  membrane.py  mm_hh.py  mms_time.py  run_2D.py  run_3D.py  run_EMIx_mesh.py  run_MMS_space.py  run_MMS_test_space.py  run_MMS_test_time.py  run_MMS_time.py  run_rat_neuron.py  solver.py  utils.py
tests/: make_mesh_MMS.py  mms_time.py  (+3 more)
(+67 files in other folders)
